--- a/blog.html
+++ b/blog.html
@@ -322,6 +322,96 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/T7FCCw1.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>march . 19 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hi fluffies <sub><img src="https://i.imgur.com/BQ0fIi9.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+these last days has been hard ..
+my mom passed away recently. her disease was taking her from me these past months, but she was living happily even so.
+we were becoming more distant with time passing by, naturally, because of my adulthood. she wanted me to gain confidence in my independence, and she wanted me to live my dreams.
+she turned into pure childhood nostalgia for me, and now i can think of her with a smile 
+i am organizing my house now, and i'm deciding things i want to keep for memory.. i feel the same warm nostalgia with her things that i feel with my childhood items.
+she was the perfect mom for me, even making me scared with her fragility, even with her fear of abandonment.. she teached me so much.
+she did her best, and i will always remember how beautiful she was.
+i am preparing for moving with bubu, and i'm ready to start this new phase of my life that i have been waiting for so long.
+this new decade will really be something else.
+i'm so thankful for having supportive people around me, and for having this angel by my side that never fails making me smile <font color="#d3a5a5" style="font-size:11px;">♡</font>
+the words i've received filled me with hope, thank you so much for believing in my healing !!
+i want to live fully and fearless, knowing that the past is not gone because my memories are forever and really loved ..
+i am capable of living more good experiences, that will not replace the others but will certainly have the same weight in my life.
+i will become only better from this experience and all the others.
+i will be very happy <font color="#d3a5a5" style="font-size:11px;">♡</font>
+we will be.
+
+i made some updates on the shy bunny store, fixing some little issues, making the layout slightly cuter, removing some sold out items, editing pictures.. an improvement <font color="#d3a5a5" style="font-size:11px;">♡</font>
+it's a little more empty now, but for a good reason ! i've sold a lot of things and will just remake people's most favorites for now, unless i get really inspired.
+i'm happy with how my store has been helping me, it's not as much money as i get on html commissions but it's still important and i really need it right now !
+unfortunately a big part of my savings had to be spent because of the recent events, so i will have to move without much money for adaptation and decoration, exactly what i was trying to avoid... but i know that everything will be fine, because i'm with bubu and that's what matters <sub><img src="https://i.imgur.com/5XtHNWA.gif"/></sub>
+things will take a while to get settled but i'm prepared for that.
+
+i also updated my html test page a little bit !
+it had frequent visits ( from same ip ) so i suppose some people actually use this to work with html :</pre><br>
+<br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/C0TNv4X.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/he42qt.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">test html .rar</font></a>　</center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i fixed some things and made the layout a lot cuter. i'm proud and i hope you like it too.. !
+i haven't used this page so much lately but it's still very useful, especially when i'm on mobile.
+remember you can access it online at <a id="linkbjinho" href="https://teddy.home.kg" target="_blank">teddy.home.kg</a>
+
+now i will show you this beautiful long dress, with a lovely golden reliquary necklace :</pre><br>
+<br>
+
+<center><img width="390px" height="auto" src="https://i.imgur.com/2d0uspY.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's not very recent, but i used it recently on a date with bubu ( and the teddy bear purse i made the other day ) so i just reminded i should post it <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+it has some very delicate details like the cream satin ribbons and tiny lace, a nightmare that is absolutely worth going through <sub><img src="https://i.imgur.com/iCF9Z06.gif"/></sub>
+it's a pure cotton fabric, really gorgeous.. cotton fabrics are the best to work with, in my opinion.
+i am so glad i have learned sewing with my mom, she helped me so much ...
+i suppose the name of this fabric is "eyelet", but here we call it "laise". it goes for the embroidered lace and the cotton fabric with details as well ( this one has tiny dots )
+also, some posts ago i talked about using "cream lacy socks & a pair of brown lolita mary janes" and someone actually asked me to show it, so here it is :</pre><br>
+<br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/7w8Z17x.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i made the frilly socks myself, and the shoes are absolutely adorable !! bubu bought them for me not long ago <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i also have two black ones and a baby pink one, but they're a little too old now. i use my shoes constantly until they're reeeeally old.. it takes some years but i really needed new ones at this point so i'm happy with this lovely present <font color="#d3a5a5" style="font-size:11px;">♡♡♡</font>
+recently i've been into those cute vintage brown boots women wear with long dresses ( very popular in mori kei as well ). i have one of these and i feel beautifully mature when i wear it with a long dress, so i might use it with the dress above someday for going on a picnic <sub><img src="https://i.imgur.com/WpBhQlT.gif"/></sub>
+
+well, i will naturally keep doing what i love, so you can expect regular updates just as always !
+if i'm motivated, i will be productive. it's that simple <sub><img src="https://i.imgur.com/SdnVQnB.gif"/></sub>
+thank you fluffies for always be here looking forward my works, this place is so precious for me i can't explain.. please stay safe <font color="#d3a5a5" style="font-size:11px;">♡</font></pre><br>
+xoxo <sub><sub><img src="https://i.imgur.com/BsGlypz.gif"/></sub></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/T7FCCw1.png"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/MLnmWtA.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -483,95 +573,6 @@ xoxo <sub><sub><img src="https://i.imgur.com/SdN0PKl.gif"/></sub></sub></pre>
 <br>
 
 <center><img src="https://i.imgur.com/2C0cMSS.gif"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/hr5KCTD.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>january . 23 . 2020</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <sub><img src="https://i.imgur.com/eVlvYVu.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-the last few days have been very comfortable, i am truly happy with the recent improvements <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i'm trying to understand and respect my feelings, cleaning my life of everything that bothers me, even if just a little bit.
-those annoying little things accumulate stress throughout the day, you know ?
-i usually have a hard time expressing my emotions and being honest, but this has been fixed and greatly improved the quality of my relationships !
-it's very important to believe in who you are and in the life you dream of living, to be able to improve consistently and not be negatively influenced by other people's ( not constructive ) opinions <sub><img src="https://i.imgur.com/k5MHWZA.gif"/></sub>
-i feel like i'm going the right way !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
-
-well, i did some pretty cute things that i'll show you today..
-first, a small thing : i colored and edited a very cute drawing and the result made me proud !</pre><br>
-<br>
-
-<center><img width="420px" height="auto" src="https://i.imgur.com/bMMexej.png"></center>
-<br>
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-the colors look so soft <font color="#d3a5a5" style="font-size:11px;">♡</font>
-looking at it makes me motivated to bake, it's something i love to do and i want to practice more <sub><img src="https://i.imgur.com/Wdbzz2m.gif"/></sub>
-i have a notable difficulty in baking bread.. i'll try my best <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-
-i did something new for the poofties project ( i said i wanted to move forward on projects this year, remember ? )
-i wanted to write down some relevant information about the world of poofti, and as i had already imagined that the "observer" potato wrote down things that she discovered, i decided to make her notes become something real :</pre></font></font><br>
-<br>
-
-<center>
-<font color="#d1aeb9" style="font-size:10px;">( click the notebook for going to the next pages )</font>
-<br><br>
-<img width="430px" height="auto" src="https://i.imgur.com/OxelpoU.png"
-onclick="if(this.src=='https://i.imgur.com/OxelpoU.png'){
-this.src='https://i.imgur.com/6F75y59.png'; }
-else{ this.src='https://i.imgur.com/OxelpoU.png'; }"/>
-</center>
-
-<br>
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i think this was a good idea and it came out very cute, don't you think ?
-i want to make more episodes of poofties, but it's something that takes a lot of time so you'll have to wait patiently ;;
-
-next is a very beautiful dress, which used to be very short and simple, and i completely renovated it and made it longer :</pre></font></font><br>
-<br>
-
-<center><img width="400px" height="auto" src="https://i.imgur.com/8MpsWFr.png"></center>
-<br>
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i feel like a princess when i wear this dress .. it's like magic !
-wearing something that changes my mood for the better is something i pay close attention to <sub><img src="https://i.imgur.com/uYMm6gZ.gif"/></sub>
-
-just like i said in the last post, i wanted to try to needle felt one more realistic little critter, and so i did :</pre></font></font><br>
-
-
-<center><img width="310px" height="auto" src="https://i.imgur.com/a8kEvEw.png"><br><br>
-<img width="290px" height="auto" src="https://i.imgur.com/cbj85BN.png"></center>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-it's a sleepy baby bunny <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
-isn't it precious ? i'm in love.. it's very small & delicate
-i won't sell this one, i will keep it to myself. i don't usually keep those little critters for myself, but this time i think i'm deserving a little gift ..
-
-that's it for today, i hope you are enjoying the updates !
-dear reader, please take care and rest when necessary. never blame yourself for feeling tired <font color="#d3a5a5" style="font-size:11px;">♡</font></pre>
-<br>
-xoxo <sub><sub><img src="https://i.imgur.com/ifHAkah.gif"/></sub></sub></pre>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/hr5KCTD.png"/></center>
 
 <br><br><br>
 
