--- a/archive.html
+++ b/archive.html
@@ -677,13 +677,13 @@ i'm still in progress of writing the script ( it's a long story, i'm writing in 
 it's a super cute cottagecore autumn themed page where i will write the script <sub><img src="https://i.imgur.com/XumCeQR.gif"/></sub></pre><br>
 <br>
 
-<center><a href="https://pumpkin.shop.tm" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/OPFfL85.png"/></a></center><br>
+<center><a href="https://boo.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/OPFfL85.png"/></a></center><br>
 
 </font></font></font>
 
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-click to enter the page ! the url is really cute ( pumpkin.shop.tm )
+click to enter the page ! the url is really cute ( boo.pooftie.me )
 it looks absolutely adorable, with the leaves falling,, and i will update it maybe .... when i start making the visuals and soundtrack ?
 i don't know for sure, because i don't want to spoil the game itself by exposing too much info, but i'll tell you once i update it.
 for now you can get to know a little bit of the lovely characters that i love so very much <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
@@ -1170,7 +1170,7 @@ i think pufchan is adorable ..<br>
 it's obviously a fake imageboard, you can't post anything, it's just visuals !<br>
 the layout is inspired by futaba, which i believe it's the first "chan". i love the 90s look of it, despite it being born in 2001 ♡<br>
 i'm sorry about my weird japanese, i just wanted to make some inside jokes there LOL<br>
-i was not very creative about the domain this time, but here we go : pufchan.fr.to<br>
+i was not very creative about the domain this time, but here we go : ch.pooftie.me<br>
 <br>
 do you like it ? would you use it ?<br>
 only cuteness allowed <img src="https://i.imgur.com/uFeVUJn.gif"/><br>
@@ -1250,7 +1250,7 @@ i'll write more about it on the q&a today.<br>
 <br>
 now, the first thing i have to post here is the backup of my last html pages i made !!<br>
 it's just a simple scenary collage with all of my favorite sprites of ragnarok online <img src="https://i.imgur.com/d3P2KyD.gif"/><br>
-aaand, of course, cute domain : <a id="linkbjinho" href="https://kafra.ro.lt" target="_blank">kafra.ro.lt</a><br>
+aaand, of course, cute domain : <a id="linkbjinho" href="https://kafra.pooftie.me" target="_blank">kafra.pooftie.me</a><br>
 ( i've always admired the kafras, they are inspiration to me /// )<br>
 i made sprites of myself in all themes.. this is my fav one :<br>
 <br><br>
@@ -1906,7 +1906,7 @@ the only sad thing is that my old blog is not on the web.archive ( just a few sp
 so i always looked at the posts in txt and the images... and it was not quite the same thing ; ;<br>
 i would really like to eternalize my first layout, with everything in place !<br>
 so i recreated my first layout ever, from 2006, with the codes and images and texts i had saved, with the post from when i started using this new layout, and it's all exactly as it was before ♡ !!!<br>
-i used a cute weeaboo domain ( kawaii.info.gf ), because it really fits the whole thing ~<br>
+i used a cute webcore domain ( 2006.pooftie.me ), because it really fits the whole thing ~<br>
 i had to re-create some scripts that were for the old internet explorer, so it didn't work anymore.<br>
 i used to embed youtube videos on the blog for music, so that's what i did. i didn't have the exact music i was using at the time, but i remember it was from di gi charat, so that's what i put there !<br>
 i liked to use english words sometimes, but i didn't really know any english at the time. should be the reason why i put my personal info in the "things" column instead of the "me" one LOL<br>
@@ -1960,7 +1960,7 @@ i really hope you like it ///<br>
 <br><br>
 　❀ ⅰ<br>
 people who have an interest in web design often have doubts about how i made this site and all my html stuff. as you all know, i've made things in html for many years, and i make lots of original and random things all the time. html and css is really something i love ♡ !<br>
-i made this site, just like all my stuff in html, from scratch. i write everything in notepad and test in .html files, or in <a text-decoration: none; href="https://teddy.home.kg" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">my html tester</font></a>. i know there are several platforms nowadays that make things a lot easier, but i always did everything from scratch because it was how i decided to start with html, from the beginning i always thought : if i had total freedom with the codes and to put everything exactly where i want and as i wish ; it was perfect. it was what i wanted. dealing with platforms for web design has always irritated me a little, honestly ; ;<br>
+i made this site, just like all my stuff in html, from scratch. i write everything in notepad and test in .html files, or in <a text-decoration: none; href="https://test.pooftie.me" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">my html tester</font></a>. i know there are several platforms nowadays that make things a lot easier, but i always did everything from scratch because it was how i decided to start with html, from the beginning i always thought : if i had total freedom with the codes and to put everything exactly where i want and as i wish ; it was perfect. it was what i wanted. dealing with platforms for web design has always irritated me a little, honestly ; ;<br>
 so, i don't have platforms to recommend, besides tumblr, because i use it and never had problems. but still, dealing with pure html is my preferred way of doing things. if you are going to make a website that is a blog or something, which will always need to be updated, using a platform would be really simpler to begin with ; but i recommend training html the old way because it helps a lot in learning ! if you really want to do things beautifully and freely, you have to lose the fear of dealing with pure codes.<br>
 web design obviously has a lot of aesthetic sense, but i've talked about aesthetics many times around here so i think this part is unnecessary... but still about visual, i really recommend you have folders of materials and graphics that can be useful. i have had several folders of materials since i was a kid, and i got all that content basically exploring the internet. blogs and websites of cute stuff are a bit rare nowadays, but on tumblr i always find it with a little effort !! the <a text-decoration: none; href="https://web.archive.org" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">web.archive</font></a> is also wonderful to find interesting sites. i have here on the site the <a text-decoration: none; href="https://middlepot.com/recommended" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">recommended page</font></a> where i have some sites & blog that can be useful for this.<br>
 now that you have several materials to do beautiful things, you need to deal with the code itself. i find html very easy, i learned to deal with it at 8, simply with small tutorials and mainly browsing other people's blogs. i know it may seem controversial but when it comes to html there is a lot that you can ( and should ) take reference to other people's codes because these are things that everyone can use and are not owned by someone specific. i honestly recommend that you always look at the source code of all the sites you are interested in understanding how they were made. after a little study you will understand how things work and will learn mostly from this practice. make sure you have a folder for codes ( you can just save it in txt files ) because you will always find things that are interesting and that you may want to use in the future ! when it comes to css and javascript ( style and script ) you can find some code that is original and can not be copied, but in this case you will certainly see a warning text. if you see no warning, you are free to try to use !<br>
@@ -2081,7 +2081,7 @@ here's the melody i used, i think it matched perfectly :<br>
 <font size = 1><font color="#B1A69E">
 <br><br>
 with kinda the same aesthetic, i made a page in html that is very simple, but it is somehow very important for me.<br>
-of course, with matching url ( soft.root.sx )<br>
+of course, with matching url ( soft.pooftie.me )<br>
 i've always wanted to do something like this in html, but it's strangely time-consuming, even though it looks so simple <img src="https://i.imgur.com/P7CUMWo.gif"/><br>
 it's pretty nonsense, but i really put some feelings into it, so i hope you like it ♡<br>
 <br><br>
@@ -2532,7 +2532,7 @@ so i started to make a html page that was comfortable to store them, organizing 
 
 <font size = 1><font color="#B1A69E">
 <br><br>
-with, of course, a cute url ( bear.shop.tm )<br>
+with, of course, a cute url ( teddy.pooftie.me )<br>
 i really enjoyed doing it and i'm very pleased with the result. did you like it ♡ ?<br>
 <br>
 today i want to write some important tips to you who often feel dissociated and confused with your very existence.<br>
@@ -2916,7 +2916,7 @@ i had this idea randomly when i was doing collage. i love doing this and i alway
 i've always wanted to somehow do this digitally, but i have never really tried, until now. it's actually easy, and a lot of fun ♡ !!<br>
 i took the opportunity to offer you some cute thematic materials that you can use for decoration, digitally or even printed. not all the stuff that i offer in these packs are mine, these are just things that i have saved here, so if anyone doesn't want their content to be included please let me know ///<br>
 i intend to keep making new pages, so stay tuned <img src="https://i.imgur.com/sWD1PMF.gif"/><br>
-the domain is literally cute ( cute.home.kg ) and i'll leave a backup file for every page i make :<br>
+the domain is cute ( aes.pooftie.me ) and i'll leave a backup file for every page i make :<br>
 <br><br>
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/VZmuGK3.png"/></center>
@@ -3458,7 +3458,7 @@ for ease, i wrote down these items in a txt, which i kept for a while. it was no
 i was in the mood to do some pretty cute html page, so i did one with some things from my routine !!<br>
 it was quite spontaneous, i was not even going to show it to anyone at first.<br>
 but as you asked for some more personal things like that, and it was so cute, i decided to post !<br>
-and with a super cute url ( comfy.now.im ), of course <img src="https://i.imgur.com/2DYo6uh.gif"/><br>
+and with a super cute url ( day.pooftie.me ), of course <img src="https://i.imgur.com/2DYo6uh.gif"/><br>
 i will leave here a backup file, as always :<br>
 <br><br>
 
@@ -4527,7 +4527,7 @@ xoxo <img src="https://i.imgur.com/fe1R9WO.gif"/><br>
 hiii fluffies <img src="https://i.imgur.com/QLvt1zB.gif"/><br>
 i now have custom domains and ssl for my tumblrs !!<br>
 i'm so happy about it, i managed to keep everything 100% covered with ssl, and i changed all the links, for the consistency.<br>
-and now i've also put some html files online : the html tester ( teddy.home.kg ), the offline ywot ( rosy.latteart.fi ) and also a new page of unicode text converters ( safe.cyberlove.us ) !<br>
+and now i've also put some html files online : the html tester ( test.pooftie.me ), the offline ywot ( txt.pooftie.me ) and also a new page of unicode text converters ( utf8.pooftie.me ) !<br>
 i like collecting unicodes, and there are some "unicode fonts" that few people know about and i think it's cool to share ! these converters were made by me for easier use.<br>
 i had doubts between using tumblr or github to host those files, and i chose github. unfortunately i can't use ssl for these, at least for now <img src="https://i.imgur.com/bAXd801.gif"/><br>
 the domains are so lovely, right ? <sub><img src="https://i.imgur.com/qSScj23.gif"/></sub><br>
@@ -5778,7 +5778,7 @@ many items are being made, but i want them to be a surprise so i'll keep it a se
 by the way, i'm really sorry for the store being only available to my country. this is because export rates are too high to the point of making sales nearly impossible <img width="15px" height="auto" src="https://i.imgur.com/kYbRfZV.gif"/><br>
 in the future i promise that i will find a solution to this problem, as i intend to bring my items to you all !<br>
 <br>
-so, i think it would be nice to let you know that i've changed the layout of my <a href="https://pooftie.my.to" id="linkbjinho" target="_blank">main tumblr</a> !<br>
+so, i think it would be nice to let you know that i've changed the layout of my <a href="https://pooftie.me" id="linkbjinho" target="_blank">main tumblr</a> !<br>
 take a look :<br>
 <br><br>
 </font></font></font>
