--- a/blog.html
+++ b/blog.html
@@ -368,7 +368,7 @@ it had frequent visits ( from same ip ) so i suppose some people actually use th
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
 i fixed some things and made the layout a lot cuter. i'm proud and i hope you like it too.. !
 i haven't used this page so much lately but it's still very useful, especially when i'm on mobile.
-remember you can access it online at <a id="linkbjinho" href="https://teddy.home.kg" target="_blank">teddy.home.kg</a>
+remember you can access it online at <a id="linkbjinho" href="https://test.pooftie.me" target="_blank">test.pooftie.me</a>
 
 now i will show you this beautiful long dress, with a lovely golden reliquary necklace :</pre><br>
 <br>
@@ -514,7 +514,7 @@ i'm thankfully getting back all of my mutuals quickly, thank you <font color="#d
 now i can find active and precious accounts, get new mutuals, finally use tags to organize my posts and improve the quality of my blog as a whole. it's certainly a relief !
 from experience, i know it's always a good idea to make changes, if for the better. i will voluntary leave the past behind if it means i can have a brighter future.
 
-okay, going for the visual content now : after months i made a new collage for my <a text-decoration: none; href="https://cute.home.kg/vii" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">aesthetic virtual journal</font></a> <sub><img src="https://i.imgur.com/9N1Avtc.gif"/></sub>
+okay, going for the visual content now : after months i made a new collage for my <a text-decoration: none; href="https://aes.pooftie.me/vii" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">aesthetic virtual journal</font></a> <sub><img src="https://i.imgur.com/9N1Avtc.gif"/></sub>
 it's a soft white one, and i'm really proud of the results ..</pre><br>
 <br>
 
