--- a/links.html
+++ b/links.html
@@ -317,27 +317,27 @@ z-index: 3;
 <sub><sub><img src="https://i.imgur.com/z2FwsNG.png"></sub></sub><font color="#c1a98b">
  html stuff :</font><br><br>
 <div style="width: 110px; height: 50px; overflow-x:hidden;">
-<a id="ooo" title="game script in progress" href="https://pumpkin.shop.tm" target="_blank" >pumpkin.shop.tm</a>
+<a id="ooo" href="https://boo.pooftie.me" target="_blank" >script in progress</a>
 <br>
-<a id="ooo" title="ideal ib simulation" href="https://pufchan.fr.to" target="_blank" >pufchan.fr.to</a>
+<a id="ooo" href="https://ch.pooftie.me" target="_blank" >soft ib simulation</a>
 <br>
-<a id="ooo" title="ragnarok online scenarios" href="https://kafra.ro.lt" target="_blank" >kafra.ro.lt</a>
+<a id="ooo" href="https://kafra.pooftie.me" target="_blank" >ragnarok scenarios</a>
 <br>
-<a id="ooo" title="my first layout ever" href="https://kawaii.info.gf" target="_blank" >kawaii.info.gf</a>
+<a id="ooo" href="https://2006.pooftie.me" target="_blank" >my first layout</a>
 <br>
-<a id="ooo" title="???" href="https://soft.root.sx" target="_blank" >soft.root.sx</a>
+<a id="ooo" href="https://soft.pooftie.me" target="_blank" >???</a>
 <br>
-<a id="ooo" title="stuffie collection" href="https://bear.shop.tm" target="_blank" >bear.shop.tm</a>
+<a id="ooo" href="https://teddy.pooftie.me" target="_blank" >stuffie collection</a>
 <br>
-<a id="ooo" title="aesthetic journal" href="https://cute.home.kg" target="_blank" >cute.home.kg</a>
+<a id="ooo" href="https://aes.pooftie.me" target="_blank" >aesthetic journal</a>
 <br>
-<a id="ooo" title="my routine" href="https://comfy.now.im" target="_blank" >comfy.now.im</a>
+<a id="ooo" href="https://day.pooftie.me" target="_blank" >my routine</a>
 <br>
-<a id="ooo" title="unicode converter" href="https://safe.cyberlove.us" target="_blank" >safe.cyberlove.us</a>
+<a id="ooo" href="https://utf8.pooftie.me" target="_blank" >unicode converter</a>
 <br>
-<a id="ooo" title="html test" href="https://teddy.home.kg" target="_blank" >teddy.home.kg</a>
+<a id="ooo" href="https://test.pooftie.me" target="_blank" >html test</a>
 <br>
-<a id="ooo" title="offline ywot" href="https://rosy.latteart.fi" target="_blank" >rosy.latteart.fi</a>
+<a id="ooo" href="https://txt.pooftie.me" target="_blank" >offline ywot</a>
 </div>
 </div>
 <div style="position:relative; float:right; right:7%;">
@@ -351,7 +351,7 @@ z-index: 3;
 <font color="#dbafaf">
 <sub><sub><img src="https://i.imgur.com/VMNuA8L.png"></sub></sub> active accs :<br></font>
 <br>
-　<font color="#7a6b6b">tmblr </font><a id="actv" title="aesthetic blog" href="https://pooftie.my.to" target="_blank" >♡</a>　<font color="#7a6b6b">yt </font><a id="actv" title="playlist ch" href="https://www.youtube.com/pooftie" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">tmblr </font><a id="actv" title="aesthetic blog" href="https://pooftie.me" target="_blank" >♡</a>　<font color="#7a6b6b">yt </font><a id="actv" title="playlist ch" href="https://www.youtube.com/pooftie" target="_blank" >♡</a><br>
 　<font color="#7a6b6b">twt </font><a id="actv" title="comfy acc" href="https://twitter.com/pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/pooftie" target="_blank" >♡</a><br>
 <br>
 </div>
