--- a/links.html
+++ b/links.html
@@ -316,7 +316,7 @@ z-index: 3;
 <div style="position:relative; float:right;">
 <sub><sub><img src="https://i.imgur.com/z2FwsNG.png"></sub></sub><font color="#c1a98b">
  html stuff :</font><br><br>
-<div style="width: 110px; height: 50px; overflow-x:hidden;">
+<div style="width: 105px; height: 50px; overflow-x:hidden; line-height:13px; padding:5px; border: 1px dotted #e2d5d0;">
 <a id="ooo" href="https://boo.pooftie.me" target="_blank" >script in progress</a>
 <br>
 <a id="ooo" href="https://ch.pooftie.me" target="_blank" >soft ib simulation</a>
