--- a/faq.html
+++ b/faq.html
@@ -1799,7 +1799,7 @@ we don't have to obey our instincts, but they can guide us to important things i
 
 <a name="html" id="html"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　how do i make my layouts ?</font><br><br><br>
-<font color="#d8b9af">　( november . 15 . 2018 )</font>
+<font color="#d8b9af">　( november . 15 . 2018 + march . 23 . 2020 )</font>
 <br><br>
 <font color="#B1A69E">
 people who have an interest in web design often have doubts about how i made this site and all my html stuff. as you all know, i've made things in html for many years, and i make lots of original and random things all the time. html and css is really something i love ♡ !<br>
@@ -1814,6 +1814,7 @@ in the beginning, you may feel a little bit of tension in messing with the base 
 it's normal that you don't understand anything that's going on for a long time, but don't worry about it, because the important thing is that things are working. you will understand how everything works with practice. now, when it comes to javascript, the thing really complicates. is much more "programming" than html and css, so you'll have to study harder if you want to make interesting scripts by yourself ; but you don't have to worry about it if programming is not your interest because you can find the scripts you need to do all sorts of things if you search right. it is still possible to make great things only with your interest in the visual side of web design ♡ !<br>
 good, now that you already have your inspirations, your materials & graphics folder, your useful codes folder, your base codes.. where to post your projects and studies ?<br>
 there are several sites where you can post things in html, but i use and recommend github. in it you can make a repository for every project you have and put the .html files there, you can change the domain and everything. about domains, github has its own domain for pages, but there are other sites where you can get cute and exclusive domains for you ! the site i use to get all my html stuff domains is <a text-decoration: none; href="https://freedns.afraid.org" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">freedns</font></a> ( just be careful to choose only public domains ). by the way, you can also use those cute domains on tumblr.<br>
+<b>edit //</b> i only recommend using the most popular domains from the first page, some of them have security problems so please be careful .. it's always safer to buy your own domain !<br>
 to get ssl on your html pages, remember that all the links you have in your code must be "https", including images and scripts. thus, you will be able to get ssl easily on any platform you are using ! finding good websites ( with ssl ) to host your stuff to use in your codes can be difficult and time-consuming, but i have on the <a text-decoration: none; href="https://middlepot.com/credits" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">credits page</font></a> all the sites i use to host each file type ! i recommend each of them, until the present moment.<br>
 <br>
 i think that's all !! everything that i indicated here are things that i legitimately do and that work for me.<br>
